Make StartupTimeBenchmark compile with Java 8